# nft-indexer-api

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  Settings.toml  entrypoint.sh  openapi.yml  sqlx-data.json
.sqlx/: query-02d0c96c53a1625f778453f0a737706554dfeb6102a161af7f0b5dce3319639b.json  query-0798e75de3aa345f5297c76a004a34342cbe60485127493557970d892f3e75e9.json  query-0b2c4810c1ccc4e8142d0c7743e3bc485c2f563f265b8b3459bacf9a720ffa65.json  query-10795a2a56c6c6162cebd8fafec514191977a108ab85f799eaccff3f4f52e7af.json  query-14217782d384f339d7155c8e4157d1267372f2da5a01d8de6689149352a07d2c.json  query-1f1f8196528dc4157c746098f130fd5fa2c950e2b89d02dd2eae4e539c90d889.json  query-2012294833894c72d46d1370d1a172c1b69ba187175f3f4a1bba49988faa5a57.json  query-203653d5f9c5d09c03fb3296b6b5cd64839453d328bb5cc0ffb2a24e96b91781.json  query-2aaed5e0cb04570175a1a5f3a3f5549489d485becda8c76f98130b7171369aab.json  query-31cda0f66c946f4f5eb14a35b6b6affbb09be90824cfb01d9d8be53445301b89.json  query-362c539780e121e2242289e6580840ab47b4e188f587ed6f485bd67906fe98e2.json  query-39e0ae149c1dc545dd7fe47865fc1ecd6d679b97e51699d15fdd0e2854a10520.json  query-43124bc1cdd94e131ee72dd9ed32d450a0376f36ae887e568dfa2f3bbfa35c56.json  query-434f18c466deeb4aeb5785d53902cd491cd1d8eff9682d4aad5bb4c7c5890999.json  query-4831425882fbf608a15e7848bdfaa2a71412e72f449706c8f6f644f94361fb86.json  query-61fdd4406009440146a4e5c62d954e5a56e118741094850186368c25286ca49a.json  query-65a16fff5f43881ad7070b72cf7020914eb614fa196afee2b31688e3a62a1c5d.json  query-687213ecf50c45bd37f7cca849d53caee73468ef1382800129ba050245d7d38b.json  query-85f4a3f90413af8f541b091dc95c133df286752031da277c19803d375d1237ba.json  query-88abf29912d963900e4a54d28f51f0b445b5b82afbf1f64d758ceb0c11142835.json  query-96ef895ee248facc9b0a5f6532d2979714f35d48de1edae9a477a61dda8afc8d.json  query-987565e6f4f34477164ce2e99c9dde490e1a221fb38113dbe9af1f9d3d70132f.json  query-98d1d4f85a2899aa04d38f720c0feafe6537f97c298cf5fd99014ac9a15145c3.json  query-999b4f97c635e660acf90af9a113ae329c524a3706bc3c334262071ed7485055.json  query-a40aba8b9e2fe3ff284389bffd4dd7535c649c6ac9351a2afb0d40b1f0c5fc4f.json  query-a5657a81f219ca1000fb81367eaac99235f892f574b2002c6d58974aa954ecad.json  query-a62682f8c50b965bbb02eed17579975447aef6aa288136ed4e2822a32c01577b.json  query-a825be428aabdf0c2dcda85690a51fb35ce1f1a642c83c5e72c21daea5097fae.json  query-ad3f6b4a594353039d7980e4322089b7ddf89a746087cbaef395bb4848f178df.json  query-ad74e02ac0b9618166e8cb69658036f128dd319e521bc6c76a58dbc86a9c094e.json  query-b956b7fc297a07ea75b388ca8a982ddcc5ee435ec2cb437ec47a83a93a503fd2.json  query-c45e9c75eab06dc40a97435dad115b2194cec184c725047ba601bb2b16c1535a.json  query-c92350e4b1f274f8eb758f3efd6d54ffa60c1928cf9494f0517b754c8bd9f600.json  query-c92f38ae1a5594fbdd51e68896cc6a1256b0ae013f61141967afa7152f01ea02.json  query-cfaf80b5e72b7300cb39336c3a7f676b1ef23266be36bae1ffe88cd9a90f1d49.json  query-d29f3f3f4f87188fb10f915ea29759bd9bcd04db28d2707fad283affecd632c5.json  query-e10ecf13473c9bab7601edf33cb9854728f51742f65a36e227657bcb668819f9.json  query-e84788ccf8061a9452dfacb46ae563d00fa53837a58f87dab63acb4154728afd.json  query-e9afaa042dbe226e396ded7b99295d1efbd1bdb84ff0c8c0deba894b26ab7628.json  query-ebd264003cdbac7a611dc7c75bcb585eccd732466be13ccd2e3238cf0f1351fc.json  (+2 more)
ansible/: build.yml
src/: cfg.rs  lib.rs  main.rs  model.rs  schema.rs  token.rs  usd_price.rs
src/db/: enums.rs  mod.rs  queries.rs  types.rs
src/db/queries/: auction.rs  collection.rs  collection_custom.rs  direct_buy.rs  direct_sell.rs  event.rs  mod.rs  nft.rs  user.rs
src/db/query_params/: collection.rs  mod.rs  nft.rs
src/db/sql/: activities.sql  list_activities.sql  metrics_summary.sql  nfts.sql  nfts_full.sql  nfts_verified.sql
src/docs/: v1.rs
src/handlers/: api_doc.rs  auction.rs  auth.rs  collection.rs  collection_custom.rs  events.rs  metadata.rs  metrics.rs  mod.rs  nft.rs  owner.rs  service.rs  swagger.rs  user.rs
src/handlers/requests/: collections.rs  metadata.rs  mod.rs
src/services/: auth.rs  error.rs
