[package]
name = "api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
base64 = "0.21.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenv = "0.15.0"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
hex = "0.4.3"
jsonwebtoken = { version = "8", default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
moka = { version = "0.11.2", features = ["future"] }
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "bigdecimal",
    "json",
    "chrono",
    "offline"
] }
stackdriver_logger = { version = "*", default-features = false, features = ["prod"] }
tokio = { version = "1.20", features = [ "macros", "rt", "time" ] }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
utoipa = "3.3.0"
warp = "0.3.3"
